recursion.logo.dragoncurve.DragonCurve1.scala.error
Erreur de compilation :
DragonCurve1:6: error: not found: value u
    u=(x+z)/2+(t-y)/2
    ^DragonCurve1:7: error: not found: value v
    v=(y+t)/2-(z-x)/2
    ^DragonCurve1:8: error: not found: value u
    dragon(order-1,x,y,u,v)
                       ^DragonCurve1:8: error: not found: value v
    dragon(order-1,x,y,u,v)
                         ^DragonCurve1:9: error: not found: value u
    dragon(order-1,z,t,u,v)
                       ^DragonCurve1:9: error: not found: value v
    dragon(order-1,z,t,u,v)
                         ^